--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -27,124 +27,10 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet" />
-    <title>Pesquisa de Profissionais Simplificada || Vagas.com</title>
-    <style type="text/css">
-      html,
-      body {
-        height: 100%;
-        margin: 0;
-        min-height: 100%;
-      }
-
-      .loader {
-        background-color: #e8eaed;
-        box-shadow: inset 0 0 0 24px #fff, inset 0 0 0 25px #8f9298, 0 0 24px #000;
-        box-sizing: border-box;
-        display: block;
-        height: 100%;
-        left: 0;
-        margin: 0;
-        position: fixed;
-        top: 0;
-        text-align: center;
-        width: 100%;
-        z-index: 1;
-      }
-
-      .loader.removing {
-        animation: fadeOut 0.8s cubic-bezier(0.08, 0.485, 0.98, 0.58) both;
-      }
-
-      .loader-svg {
-        position: fixed;
-        top: 50%;
-        left: 50%;
-        transform: translate3d(-50%, -50%, 0);
-        transform-origin: 50% 50%;
-      }
-
-      .legend-loader {
-        bottom: 48px;
-        color: #262936;
-        font-family: 'Open Sans', sans-serif;
-        font-weight: 400;
-        font-size: 14px;
-        position: absolute;
-        width: 100%;
-        z-index: 2;
-      }
-
-      @keyframes fadeOut {
-        0% {
-          opacity: 1;
-        }
-
-        100% {
-          opacity: 0;
-        }
-      }
-    </style>
+    <title>Read-it</title>
   </head>
   <body>
     <noscript> You need to enable JavaScript to run this app. </noscript>
-    <div class="loader">
-      <svg
-        class="loader-svg"
-        width="88"
-        height="88"
-        viewBox="0 0 88 88"
-        xmlns="http://www.w3.org/2000/svg"
-        stroke="#eb5d36"
-      >
-        <g fill="none" fill-rule="evenodd" stroke-width="2">
-          <circle cx="44" cy="44" r="1">
-            <animate
-              attributeName="r"
-              begin="0s"
-              dur="1.8s"
-              values="1; 20"
-              calcMode="spline"
-              keyTimes="0; 1"
-              keySplines="0.33, 1.68, 0.88, 2"
-              repeatCount="indefinite"
-            />
-            <animate
-              attributeName="stroke-opacity"
-              begin="0s"
-              dur="1.8s"
-              values="1; 0"
-              calcMode="spline"
-              keyTimes="0; 1"
-              keySplines="0.6, 1.22, 0.71, 2"
-              repeatCount="indefinite"
-            />
-          </circle>
-          <circle cx="44" cy="44" r="1">
-            <animate
-              attributeName="r"
-              begin="-0.9s"
-              dur="1.8s"
-              values="1; 20"
-              calcMode="spline"
-              keyTimes="0; 1"
-              keySplines="0.33, 1.68, 0.88, 2"
-              repeatCount="indefinite"
-            />
-            <animate
-              attributeName="stroke-opacity"
-              begin="-0.9s"
-              dur="1.8s"
-              values="1; 0"
-              calcMode="spline"
-              keyTimes="0; 1"
-              keySplines="0.6, 1.22, 0.71, 2"
-              repeatCount="indefinite"
-            />
-          </circle>
-        </g>
-      </svg>
-      <p class="legend-loader">Aguarde, carregando Read-it...</p>
-    </div>
     <div id="root"></div>
     <!--
       This HTML file is a template.
